refactor help homepage html

--- a/data/resources/help/latex2e_0.html
+++ b/data/resources/help/latex2e_0.html
@@ -55,7 +55,6 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body { margin: 1em; margin-top: 0px; padding-top: 1px; }
 h1 { text-align: left; }
-ul, li { margin: 0px; padding: 0px; }
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -78,7 +77,6 @@ pre.smalllisp {font-size: smaller}
 span.nolinebreak {white-space: nowrap}
 span.roman {font-family: initial; font-weight: normal}
 span.sansserif {font-family: sans-serif; font-weight: normal}
-ul.no-bullet {list-style: none}
 -->
 </style>
 
@@ -98,61 +96,61 @@ ul.no-bullet {list-style: none}
 <div class="contents">
 
 <ul class="no-bullet">
-<li><a name="toc-Overview-of-LaTeX" href="latex2e_2.html#Overview">Overview of LaTeX</a><br> Starting and ending, Output files, TeX engines, LaTeX command syntax, Environment, CTAN: the Comprehensive TeX Archive Network</li><br>
+<p><a name="toc-Overview-of-LaTeX" href="latex2e_2.html#Overview">Overview of LaTeX</a><br> Starting and ending, Output files, TeX engines, LaTeX command syntax, Environment, CTAN: the Comprehensive TeX Archive Network</p>
 
-<li><a name="toc-Document-classes-1" href="latex2e_3.html#Document-classes">Document classes</a><br> Document class options, Additional packages, Class and package construction</li><br>
+<p><a name="toc-Document-classes-1" href="latex2e_3.html#Document-classes">Document classes</a><br> Document class options, Additional packages, Class and package construction</p>
 
-<li><a name="toc-Fonts-1" href="latex2e_4.html#Fonts">Fonts</a><br> Font styles, Font sizes, Low-level font commands</li><br>
+<p><a name="toc-Fonts-1" href="latex2e_4.html#Fonts">Fonts</a><br> Font styles, Font sizes, Low-level font commands</p>
 
-<li><a name="toc-Layout-1" href="latex2e_5.html#Layout">Layout</a><br> <code>\onecolumn</code>, <code>\twocolumn</code>, <code>\flushbottom</code>, <code>\raggedbottom</code>, Page layout parameters, Floats</li><br>
+<p><a name="toc-Layout-1" href="latex2e_5.html#Layout">Layout</a><br> <code>\onecolumn</code>, <code>\twocolumn</code>, <code>\flushbottom</code>, <code>\raggedbottom</code>, Page layout parameters, Floats</p>
 
-<li><a name="toc-Sectioning-1" href="latex2e_6.html#Sectioning">Sectioning</a><br> <code>\part</code>, <code>\chapter</code>, <code>\section</code>, <code>\subsection</code>, <code>\subsubsection</code>, <code>\paragraph</code>, <code>\subparagraph</code>, <code>\appendix</code>, <code>\frontmatter</code>, <code>\mainmatter</code>, <code>\backmatter</code></a>, <code>\@startsection</code></a></li><br>
+<p><a name="toc-Sectioning-1" href="latex2e_6.html#Sectioning">Sectioning</a><br> <code>\part</code>, <code>\chapter</code>, <code>\section</code>, <code>\subsection</code>, <code>\subsubsection</code>, <code>\paragraph</code>, <code>\subparagraph</code>, <code>\appendix</code>, <code>\frontmatter</code>, <code>\mainmatter</code>, <code>\backmatter</code></a>, <code>\@startsection</code></a></p>
 
-<li><a name="toc-Cross-references-1" href="latex2e_7.html#Cross-references">Cross references</a><br> <code>\label</code>, <code>\pageref</code>, <code>\ref</code></li><br>
+<p><a name="toc-Cross-references-1" href="latex2e_7.html#Cross-references">Cross references</a><br> <code>\label</code>, <code>\pageref</code>, <code>\ref</code></p>
 
-<li><a name="toc-Environments-1" href="latex2e_8.html#Environments">Environments</a><br> <code>abstract</code>, <code>array</code>, <code>center</code>, <code>description</code>, <code>displaymath</code>, <code>document</code>, <code>enumerate</code>, <code>eqnarray</code>, <code>equation</code>, <code>figure</code>, <code>filecontents</code>: Write an external file, <code>flushleft</code>, <code>flushright</code>, <code>itemize</code>, <code>letter</code> environment: writing letters, <code>list</code>, <code>math</code>, <code>minipage</code>, <code>picture</code>, <code>quotation</code> &amp; <code>quote</code>, <code>tabbing</code>, <code>table</code>, <code>tabular</code>, <code>thebibliography</code>, <code>theorem</code>, <code>titlepage</code>, <code>verbatim</code>, <code>verse</code></li><br>
+<p><a name="toc-Environments-1" href="latex2e_8.html#Environments">Environments</a><br> <code>abstract</code>, <code>array</code>, <code>center</code>, <code>description</code>, <code>displaymath</code>, <code>document</code>, <code>enumerate</code>, <code>eqnarray</code>, <code>equation</code>, <code>figure</code>, <code>filecontents</code>: Write an external file, <code>flushleft</code>, <code>flushright</code>, <code>itemize</code>, <code>letter</code> environment: writing letters, <code>list</code>, <code>math</code>, <code>minipage</code>, <code>picture</code>, <code>quotation</code> &amp; <code>quote</code>, <code>tabbing</code>, <code>table</code>, <code>tabular</code>, <code>thebibliography</code>, <code>theorem</code>, <code>titlepage</code>, <code>verbatim</code>, <code>verse</code></p>
 
-<li><a name="toc-Line-breaking-1" href="latex2e_9.html#Line-breaking">Line breaking</a><br> <code>\\</code>, <code>\obeycr</code> &amp; <code>\restorecr</code>, <code>\newline</code>, <code>\-</code> (discretionary hyphen), <code>\discretionary</code> (generalized hyphenation point), <code>\fussy</code> &amp; <code>\sloppy</code>, <code>\hyphenation</code>, <code>\linebreak</code> &amp; <code>\nolinebreak</code></li><br>
+<p><a name="toc-Line-breaking-1" href="latex2e_9.html#Line-breaking">Line breaking</a><br> <code>\\</code>, <code>\obeycr</code> &amp; <code>\restorecr</code>, <code>\newline</code>, <code>\-</code> (discretionary hyphen), <code>\discretionary</code> (generalized hyphenation point), <code>\fussy</code> &amp; <code>\sloppy</code>, <code>\hyphenation</code>, <code>\linebreak</code> &amp; <code>\nolinebreak</code></p>
 
-<li><a name="toc-Page-breaking-1" href="latex2e_10.html#Page-breaking">Page breaking</a><br> <code>\clearpage</code> &amp; <code>\cleardoublepage</code>, <code>\newpage</code>, <code>\enlargethispage</code>, <code>\pagebreak</code> &amp; <code>\nopagebreak</code></li><br>
+<p><a name="toc-Page-breaking-1" href="latex2e_10.html#Page-breaking">Page breaking</a><br> <code>\clearpage</code> &amp; <code>\cleardoublepage</code>, <code>\newpage</code>, <code>\enlargethispage</code>, <code>\pagebreak</code> &amp; <code>\nopagebreak</code></p>
 
-<li><a name="toc-Footnotes-1" href="latex2e_11.html#Footnotes">Footnotes</a><br> <code>\footnote</code>, <code>\footnotemark</code>, <code>\footnotetext</code>, Footnotes in section headings, Footnotes in a table, Footnotes of footnotes</li><br>
+<p><a name="toc-Footnotes-1" href="latex2e_11.html#Footnotes">Footnotes</a><br> <code>\footnote</code>, <code>\footnotemark</code>, <code>\footnotetext</code>, Footnotes in section headings, Footnotes in a table, Footnotes of footnotes</p>
 
-<li><a name="toc-Definitions-1" href="latex2e_12.html#Definitions">Definitions</a><br> <code>\newcommand</code> &amp; <code>\renewcommand</code>, <code>\providecommand</code>, <code>\makeatletter</code> &amp; <code>\makeatother</code>, <code>\@ifstar</code>, <code>\newcounter</code>: Allocating a counter, <code>\newlength</code>, <code>\newsavebox</code>, <code>\newenvironment</code> &amp; <code>\renewenvironment</code>, <code>\newtheorem</code>, <code>\newfont</code>, <code>\protect</code>, <code>\ignorespaces &amp; \ignorespacesafterend</code></li><br>
+<p><a name="toc-Definitions-1" href="latex2e_12.html#Definitions">Definitions</a><br> <code>\newcommand</code> &amp; <code>\renewcommand</code>, <code>\providecommand</code>, <code>\makeatletter</code> &amp; <code>\makeatother</code>, <code>\@ifstar</code>, <code>\newcounter</code>: Allocating a counter, <code>\newlength</code>, <code>\newsavebox</code>, <code>\newenvironment</code> &amp; <code>\renewenvironment</code>, <code>\newtheorem</code>, <code>\newfont</code>, <code>\protect</code>, <code>\ignorespaces &amp; \ignorespacesafterend</code></p>
 
-<li><a name="toc-Counters-1" href="latex2e_13.html#Counters">Counters</a><br> <code>\alph \Alph \arabic \roman \Roman \fnsymbol</code>: Printing counters, <code>\usecounter</code>, <code>\value</code>, <code>\setcounter</code>, <code>\addtocounter</code>, <code>\refstepcounter</code>, <code>\stepcounter</code>, <code>\day</code> &amp; <code>\month</code> &amp; <code>\year</code></li><br>
+<p><a name="toc-Counters-1" href="latex2e_13.html#Counters">Counters</a><br> <code>\alph \Alph \arabic \roman \Roman \fnsymbol</code>: Printing counters, <code>\usecounter</code>, <code>\value</code>, <code>\setcounter</code>, <code>\addtocounter</code>, <code>\refstepcounter</code>, <code>\stepcounter</code>, <code>\day</code> &amp; <code>\month</code> &amp; <code>\year</code></p>
 
-<li><a name="toc-Lengths-1" href="latex2e_14.html#Lengths">Lengths</a><br> Units of length, <code>\setlength</code>, <code>\addtolength</code>, <code>\settodepth</code>, <code>\settoheight</code>, <code>\settowidth</code></li><br>
+<p><a name="toc-Lengths-1" href="latex2e_14.html#Lengths">Lengths</a><br> Units of length, <code>\setlength</code>, <code>\addtolength</code>, <code>\settodepth</code>, <code>\settoheight</code>, <code>\settowidth</code></p>
 
-<li><a name="toc-Making-paragraphs-1" href="latex2e_15.html#Making-paragraphs">Making paragraphs</a><br> <code>\par</code>, <code>\indent</code> &amp; <code>\noindent</code>, <code>\parindent</code> &amp; <code>\parskip</code>, Marginal notes</li><br>
+<p><a name="toc-Making-paragraphs-1" href="latex2e_15.html#Making-paragraphs">Making paragraphs</a><br> <code>\par</code>, <code>\indent</code> &amp; <code>\noindent</code>, <code>\parindent</code> &amp; <code>\parskip</code>, Marginal notes</p>
 
-<li><a name="toc-Math-formulas-1" href="latex2e_16.html#Math-formulas">Math formulas</a><br> Subscripts &amp; superscripts, Math symbols, Math functions, Math accents, Over- and Underlining, Spacing in math mode, Math miscellany</li><br>
+<p><a name="toc-Math-formulas-1" href="latex2e_16.html#Math-formulas">Math formulas</a><br> Subscripts &amp; superscripts, Math symbols, Math functions, Math accents, Over- and Underlining, Spacing in math mode, Math miscellany</p>
 
-<li><a name="toc-Modes-1" href="latex2e_17.html#Modes">Modes</a><br> <code>\ensuremath</code></li><br>
+<p><a name="toc-Modes-1" href="latex2e_17.html#Modes">Modes</a><br> <code>\ensuremath</code></p>
 
-<li><a name="toc-Page-styles-1" href="latex2e_18.html#Page-styles">Page styles</a><br> <code>\maketitle</code>, <code>\pagenumbering</code>, <code>\pagestyle</code>, <code>\thispagestyle</code></li><br>
+<p><a name="toc-Page-styles-1" href="latex2e_18.html#Page-styles">Page styles</a><br> <code>\maketitle</code>, <code>\pagenumbering</code>, <code>\pagestyle</code>, <code>\thispagestyle</code></p>
 
-<li><a name="toc-Spaces-1" href="latex2e_19.html#Spaces">Spaces</a><br> <code>\enspace</code> &amp; <code>\quad</code> &amp; <code>\qquad</code>, <code>\hspace</code>, <code>\hfill</code>, <code>\hss</code>, <code>\spacefactor</code>, Backslash-space, <code>\ </code>, <code>~</code>, <code>\thinspace</code> &amp; <code>\negthinspace</code>, <code>\/</code></a>, <code>\hrulefill</code> &amp; <code>\dotfill</code>, <code>\bigskip</code> &amp; <code>\medskip</code> &amp; <code>\smallskip</code>, <code>\bigbreak</code> &amp; <code>\medbreak</code> &amp; <code>\smallbreak</code>, <code>\strut</code>, <code>\vspace</code>, <code>\vfill</code>, <code>\addvspace</code></li><br>
+<p><a name="toc-Spaces-1" href="latex2e_19.html#Spaces">Spaces</a><br> <code>\enspace</code> &amp; <code>\quad</code> &amp; <code>\qquad</code>, <code>\hspace</code>, <code>\hfill</code>, <code>\hss</code>, <code>\spacefactor</code>, Backslash-space, <code>\ </code>, <code>~</code>, <code>\thinspace</code> &amp; <code>\negthinspace</code>, <code>\/</code></a>, <code>\hrulefill</code> &amp; <code>\dotfill</code>, <code>\bigskip</code> &amp; <code>\medskip</code> &amp; <code>\smallskip</code>, <code>\bigbreak</code> &amp; <code>\medbreak</code> &amp; <code>\smallbreak</code>, <code>\strut</code>, <code>\vspace</code>, <code>\vfill</code>, <code>\addvspace</code></p>
 
-<li><a name="toc-Boxes-1" href="latex2e_20.html#Boxes">Boxes</a><br> <code>\mbox</code> &amp; <code>\makebox</code>, <code>\fbox</code> &amp; <code>\framebox</code>, <code>\parbox</code>, <code>\raisebox</code>, <code>\sbox</code> &amp; <code>\savebox</code>, <code>lrbox</code>, <code>\usebox</code></li><br>
+<p><a name="toc-Boxes-1" href="latex2e_20.html#Boxes">Boxes</a><br> <code>\mbox</code> &amp; <code>\makebox</code>, <code>\fbox</code> &amp; <code>\framebox</code>, <code>\parbox</code>, <code>\raisebox</code>, <code>\sbox</code> &amp; <code>\savebox</code>, <code>lrbox</code>, <code>\usebox</code></p>
 
-<li><a name="toc-Color-1" href="latex2e_21.html#Color">Color</a><br> <code>color</code> package options, Color models, Commands for color, Define colors, Colored text, Colored boxes, Colored pages</li><br>
+<p><a name="toc-Color-1" href="latex2e_21.html#Color">Color</a><br> <code>color</code> package options, Color models, Commands for color, Define colors, Colored text, Colored boxes, Colored pages</p>
 
-<li><a name="toc-Graphics-1" href="latex2e_22.html#Graphics">Graphics</a><br> <code>graphics</code> package options, <code>graphics</code> package configuration, Commands for graphics, <code>\includegraphics</code>, <code>\rotatebox</code>, <code>\scalebox</code>, <code>\resizebox</code></li><br>
+<p><a name="toc-Graphics-1" href="latex2e_22.html#Graphics">Graphics</a><br> <code>graphics</code> package options, <code>graphics</code> package configuration, Commands for graphics, <code>\includegraphics</code>, <code>\rotatebox</code>, <code>\scalebox</code>, <code>\resizebox</code></p>
 
-<li><a name="toc-Special-insertions-1" href="latex2e_23.html#Special-insertions">Special insertions</a><br> Reserved characters, Upper and lower case, Symbols by font position, Text symbols, Accents, Additional Latin letters, <code>\rule</code>, <code>\today</code></li><br>
+<p><a name="toc-Special-insertions-1" href="latex2e_23.html#Special-insertions">Special insertions</a><br> Reserved characters, Upper and lower case, Symbols by font position, Text symbols, Accents, Additional Latin letters, <code>\rule</code>, <code>\today</code></p>
 
-<li><a name="toc-Splitting-the-input-1" href="latex2e_24.html#Splitting-the-input">Splitting the input</a><br> <code>\endinput</code>, <code>\include</code> &amp; <code>\includeonly</code>, <code>\input</code></li><br>
+<p><a name="toc-Splitting-the-input-1" href="latex2e_24.html#Splitting-the-input">Splitting the input</a><br> <code>\endinput</code>, <code>\include</code> &amp; <code>\includeonly</code>, <code>\input</code></p>
 
-<li><a name="toc-Front_002fback-matter-1" href="latex2e_25.html#Front_002fback-matter">Front/back matter</a><br> Table of contents etc., Indexes, Glossaries</li><br>
+<p><a name="toc-Front_002fback-matter-1" href="latex2e_25.html#Front_002fback-matter">Front/back matter</a><br> Table of contents etc., Indexes, Glossaries</p>
 
-<li><a name="toc-Letters-1" href="latex2e_26.html#Letters">Letters</a><br> <code>\address</code>, <code>\cc</code>, <code>\closing</code>, <code>\encl</code>, <code>\location</code>, <code>\makelabels</code>, <code>\name</code>, <code>\opening</code>, <code>\ps</code>, <code>\signature</code>, <code>\telephone</code></li><br>
+<p><a name="toc-Letters-1" href="latex2e_26.html#Letters">Letters</a><br> <code>\address</code>, <code>\cc</code>, <code>\closing</code>, <code>\encl</code>, <code>\location</code>, <code>\makelabels</code>, <code>\name</code>, <code>\opening</code>, <code>\ps</code>, <code>\signature</code>, <code>\telephone</code></p>
 
-<li><a name="toc-Terminal-input_002foutput-1" href="latex2e_27.html#Terminal-input_002foutput">Terminal input/output</a><br> <code>\typein</code>, <code>\typeout</code></li><br>
+<p><a name="toc-Terminal-input_002foutput-1" href="latex2e_27.html#Terminal-input_002foutput">Terminal input/output</a><br> <code>\typein</code>, <code>\typeout</code></p>
 
-<li><a name="toc-Command-line-1" href="latex2e_28.html#Command-line">Command line</a><br> Command line options, Command line input, Recovering from errors</li><br>
+<p><a name="toc-Command-line-1" href="latex2e_28.html#Command-line">Command line</a><br> Command line options, Command line input, Recovering from errors</p>
 
-<li><a name="toc-Document-templates-1" href="latex2e_29.html#Document-templates">Appendix: Document templates</a><br> <code>beamer</code>, <code>article</code>, <code>book</code>, ...</li>
+<p><a name="toc-Document-templates-1" href="latex2e_29.html#Document-templates">Appendix: Document templates</a><br> <code>beamer</code>, <code>article</code>, <code>book</code>, ...</li>
 </ul>
 </div>
 
